git submodule projet 3

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Projets Openclassrooms Developpeur Web</h2>
             <ul>
                 <li><a href="construction.html">Projet 2 : Transformez une maquette en site web</a></li>
-                <li><a href="projet_3/">Projet 3 : Dynamisez une page web avec des animations CSS</a></li>
+                <li><a href="https://sodanlabs.github.io/projets_openclassrooms/projet_3/">Projet 3 : Dynamisez une page web avec des animations CSS</a></li>
                 <li><a href="construction.html">Projet 4 : Optimisez un site web existant</a></li>
                 <li><a href="construction.html">Projet 5 : Construisez un site e-commerce</a></li>
                 <li><a href="construction.html">Projet 6 : Construisez une API sécurisée pour une application d'avis gastronomiques</a></li>
