fix(content): add class isDisabled to empty link

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <main>
-        <h2>Projets Openclassrooms Developpeur Web</h2>
+        <h1>Projets Openclassrooms Developpeur Web</h1>
             <ul>
-                <li><a href="construction.html">Projet 2 : Transformez une maquette en site web</a></li>
+                <li><a class="isDisabled" href="construction.html">Projet 2 : Transformez une maquette en site web</a></li>
                 <li><a href="projet_3/">Projet 3 : Dynamisez une page web avec des animations CSS</a></li>
-                <li><a href="construction.html">Projet 4 : Optimisez un site web existant</a></li>
-                <li><a href="construction.html">Projet 5 : Construisez un site e-commerce</a></li>
-                <li><a href="construction.html">Projet 6 : Construisez une API sécurisée pour une application d'avis gastronomiques</a></li>
-                <li><a href="construction.html">Projet 7 : Créez un réseau social d’entreprise</a></li>
+                <li><a href="projet_4/">Projet 4 : Optimisez un site web existant</a></li>
+                <li><a class="isDisabled" href="construction.html">Projet 5 : Construisez un site e-commerce</a></li>
+                <li><a class="isDisabled" href="construction.html">Projet 6 : Construisez une API sécurisée pour une application d'avis gastronomiques</a></li>
+                <li><a class="isDisabled" href="construction.html">Projet 7 : Créez un réseau social d’entreprise</a></li>
             </ul>
     </main>
 </body>
